--- a/styles/app.css
+++ b/styles/app.css
@@ -1,7 +1,7 @@
 :root {
   --light: #d9d9d9;
   --lighter: #d9d9d9cc;
-  --dark: #0b1d26;
+  --dark: #09171f;
   --border: 2px solid var(--lighter);
 }
 
@@ -9,8 +9,8 @@
   font-weight: 400;
   font-family: Inter;
   src:
-    url("../fonts/Inter-Regular.woff") format("woff"),
-    url("../fonts/Inter-Regular.woff2") format("woff2")
+    url("../assets/fonts/Inter-Regular.woff") format("woff"),
+    url("../assets/Inter-Regular.woff2") format("woff2")
   ;
 }
 
@@ -18,8 +18,8 @@
   font-weight: 600;
   font-family: Inter;
   src:
-    url("../fonts/Inter-SemiBold.woff") format("woff"),
-    url("../fonts/Inter-SemiBold.woff2") format("woff2")
+    url("../assets/fonts/Inter-SemiBold.woff") format("woff"),
+    url("../assets/fonts/Inter-SemiBold.woff2") format("woff2")
   ;
 }
 
@@ -27,8 +27,8 @@
   font-weight: 700;
   font-family: Inter;
   src:
-    url("../fonts/Inter-Bold.woff") format("woff"),
-    url("../fonts/Inter-Bold.woff2") format("woff2")
+    url("../assets/fonts/Inter-Bold.woff") format("woff"),
+    url("../assets/fonts/Inter-Bold.woff2") format("woff2")
   ;
 }
 
@@ -41,13 +41,14 @@
 body {
   height: 100vh;
   line-height: 1.2;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   color: var(--light);
   background: var(--dark);
 }
 
 h1 {
-  margin: 0 0 20px;
+  flex-basis: 100%;
+  margin: 0 0 30px;
   font-weight: 700;
   font-size: 30px;
   text-align: center;
@@ -60,20 +61,34 @@ h2 {
 }
 
 .container {
-  max-width: 1020px;
-  padding: 40px 10px;
+  max-width: 800px;
+  padding: 30px 20px;
   margin: 0 auto;
 }
 
+.schedule {
+  display: flex;
+  flex-flow: column wrap;
+  align-content: space-around;
+  align-items: center;
+  gap: 20px 20px;
+  max-height: 700px;
+}
+
+.day {
+  width: 340px;
+  flex-shrink: 1;
+}
+
 .day-table {
+  width: 100%;
   border: 3px solid var(--lighter);
-  border-radius: 15px;
   border-spacing: 0;
+  border-radius: 15px;
 }
 
 .day-table tr:not(:last-child) td {
   border-bottom: var(--border);
-  border-spacing: 2px;
 }
 
 .lesson-time {
@@ -81,8 +96,8 @@ h2 {
   padding: 3px;
   font-weight: 600;
   font-size: 14px;
-  color: var(--lighter);
   text-align: center;
+  color: var(--lighter);
   border-right: var(--border);
 }
 
@@ -104,6 +119,37 @@ h2 {
   font-weight: 600;
 }
 
-@media (max-width: ) {
-  
+@media (max-width: 760px) {
+  h1 {
+    margin-bottom: 25px;
+  }
+
+  .schedule {
+    flex-wrap: nowrap;
+    max-height: none;
+  }
+
+  .day {
+    width: 70%;
+  }
+}
+
+@media (max-width: 530px) {
+  h1 {
+    margin-bottom: 20px;
+  }
+
+  .day {
+    width: 340px;
+  }
+}
+
+@media (max-width: 350px) {
+  .day {
+    width: 95%;
+  }
+
+  .lesson-time {
+    min-width: 50px;
+  }
 }
