--- a/styles/app.css
+++ b/styles/app.css
@@ -72,7 +72,7 @@ h2 {
   align-content: space-around;
   align-items: center;
   gap: 20px 20px;
-  max-height: 700px;
+  max-height: 800px;
 }
 
 .day {
@@ -92,7 +92,7 @@ h2 {
 }
 
 .lesson-time {
-  min-width: 90px;
+  width: 95px;
   padding: 3px;
   font-weight: 600;
   font-size: 14px;
@@ -106,6 +106,7 @@ h2 {
 }
 
 .lesson h3 {
+  margin-bottom: 5px;
   font-size: 16px;
 }
 
@@ -119,9 +120,14 @@ h2 {
   font-weight: 600;
 }
 
+.texr-center {
+  text-align: center;
+}
+
 @media (max-width: 760px) {
   h1 {
     margin-bottom: 25px;
+    font-size: 26px;
   }
 
   .schedule {
@@ -132,6 +138,11 @@ h2 {
   .day {
     width: 70%;
   }
+
+  .lesson-time {
+    width: 25%;
+    min-width: 95px;
+  }
 }
 
 @media (max-width: 530px) {
@@ -140,16 +151,18 @@ h2 {
   }
 
   .day {
-    width: 340px;
+    width: 80%;
+    min-width: 330px;
   }
 }
 
 @media (max-width: 350px) {
   .day {
     width: 95%;
+    min-width: auto;
   }
 
   .lesson-time {
-    min-width: 50px;
+    min-width: auto;
   }
 }
